[gd_scene load_steps=8 format=1]

[ext_resource path="res://scenes/ladder.gd" type="Script" id=1]
[ext_resource path="res://images/ladder.png" type="Texture" id=2]

[sub_resource type="RectangleShape2D" id=1]

custom_solver_bias = 0.0
extents = Vector2( 0.5, 2 )

[sub_resource type="RectangleShape2D" id=2]

custom_solver_bias = 0.0
extents = Vector2( 0.5, 2 )

[sub_resource type="RectangleShape2D" id=3]

custom_solver_bias = 0.0
extents = Vector2( 1, 1 )

[sub_resource type="RectangleShape2D" id=4]

custom_solver_bias = 0.0
extents = Vector2( 4, 6 )

[sub_resource type="RectangleShape2D" id=5]

custom_solver_bias = 0.0
extents = Vector2( 6, 3 )

[node name="ladder_bottom" type="Node2D"]

script/script = ExtResource( 1 )

[node name="ladder1" type="Sprite" parent="."]

transform/pos = Vector2( 0, 8 )
texture = ExtResource( 2 )

[node name="ladder0" type="Sprite" parent="."]

transform/pos = Vector2( 0, 24 )
texture = ExtResource( 2 )

[node name="LR1" type="Area2D" parent="."]

transform/pos = Vector2( 9, 24 )
input/pickable = true
shapes/0/shape = SubResource( 1 )
shapes/0/transform = Matrix32( 1, 0, 0, 1, 1, 6 )
shapes/0/trigger = false
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
__meta__ = { "_editor_collapsed":true }

[node name="CollisionShape2D" type="CollisionShape2D" parent="LR1"]

transform/pos = Vector2( 1, 6 )
shape = SubResource( 1 )
trigger = false
_update_shape_index = 0

[node name="LR2" type="Area2D" parent="."]

transform/pos = Vector2( -9, 24 )
input/pickable = true
shapes/0/shape = SubResource( 2 )
shapes/0/transform = Matrix32( 1, 0, 0, 1, -1, 6 )
shapes/0/trigger = false
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
__meta__ = { "_editor_collapsed":true }

[node name="CollisionShape2D" type="CollisionShape2D" parent="LR2"]

transform/pos = Vector2( -1, 6 )
shape = SubResource( 2 )
trigger = false
_update_shape_index = 0

[node name="U" type="Area2D" parent="."]

transform/pos = Vector2( 0, 31 )
input/pickable = true
shapes/0/shape = SubResource( 3 )
shapes/0/transform = Matrix32( 1, 0, 0, 1, 0, 0 )
shapes/0/trigger = false
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
__meta__ = { "_editor_collapsed":true }

[node name="CollisionShape2D" type="CollisionShape2D" parent="U"]

shape = SubResource( 3 )
trigger = false
_update_shape_index = 0

[node name="UD" type="Area2D" parent="."]

transform/pos = Vector2( 0, 8 )
input/pickable = true
shapes/0/shape = SubResource( 4 )
shapes/0/transform = Matrix32( 1, 0, 0, 1, 0, -1 )
shapes/0/trigger = false
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
__meta__ = { "_editor_collapsed":true }

[node name="CollisionShape2D" type="CollisionShape2D" parent="UD"]

transform/pos = Vector2( 0, -1 )
shape = SubResource( 4 )
trigger = false
_update_shape_index = 0

[node name="NoDig1" type="StaticBody2D" parent="."]

transform/pos = Vector2( 0, 32 )
input/pickable = false
shapes/0/shape = SubResource( 5 )
shapes/0/transform = Matrix32( 1, 0, 0, 1, 0, 3 )
shapes/0/trigger = false
collision/layers = 2
collision/mask = 2
constant_linear_velocity = Vector2( 0, 0 )
constant_angular_velocity = 0.0
friction = 1.0
bounce = 0.0
__meta__ = { "_editor_collapsed":true }

[node name="CollisionShape2D" type="CollisionShape2D" parent="NoDig1"]

transform/pos = Vector2( 0, 3 )
shape = SubResource( 5 )
trigger = false
_update_shape_index = 0

[connection signal="body_enter" from="LR1" to="." method="_on_LR_body_enter"]

[connection signal="body_enter" from="LR2" to="." method="_on_LR_body_enter"]

[connection signal="body_enter" from="U" to="." method="_on_U_body_enter"]

[connection signal="body_enter" from="UD" to="." method="_on_UD_body_enter"]

[connection signal="body_exit" from="UD" to="." method="_on_UD_body_exit"]


